--- a/.gitignore
+++ b/.gitignore
@@ -2,15 +2,18 @@
 *egg-info*
 *__pycache__*
 aa.png
-bin.save/
-build/
-dist/
-gaga.srctrlbm
-gaga.srctrldb
-gaga.srctrldb_tmp
-gaga.srctrlprj
-src.save/
-bin/gaga_garf_generate_img.save
-bin/gaga_garf_generate_img_old
-src/gaga.save.py
-src/gaga.save2.py
+
+/bin.save/
+/build/
+/.idea/
+
+/dist/
+*.srctrl*
+
+/src.save/
+/bin/gaga_garf_generate_img.save
+/bin/gaga_garf_generate_img_old
+/src/gaga.save.py
+/src/gaga.save2.py
+
+/tests/
