Debug github actions

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,6 +29,7 @@ jobs:
         architecture: 'x64'
     - name: Create Wheel
       run: | 
+          pip install bdist_wheel
           python setup.py sdist bdist_wheel
     - name: Upload wheels
       uses: actions/upload-artifact@v1
