--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ aa.png
 /bin.save/
 /build/
 /.idea/
+/.idea_save
 
 /dist/
 *.srctrl*
@@ -30,3 +31,10 @@ aa.png
 /tests/jobs
 /tests_old
 /tests/a.pdf
+
+*OLD*
+/gaga/gaga_helpers_pet_before_dw_change.py
+*.save
+/bin/gaga_add_param_to_G
+/bin/gaga_test_G_with_transform
+
