--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,18 +21,18 @@ jobs:
     - name: Checkout github repo
       uses: actions/checkout@v4
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5
       with:
         python-version: 3.9
         architecture: 'x64'
     - name: Create Wheel
       run: | 
-          pip install wheel
-          python setup.py sdist bdist_wheel
+          pip install build
+          python -m build
     - name: Upload wheels
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
-        name: dist
+        name: dist-${{ matrix.os }}-${{ matrix.python-version }}
         path: dist/
 
   test_wheel:
@@ -44,13 +44,14 @@ jobs:
     - name: Checkout submodules
       run: git submodule update --init --recursive
     - name: Set up Python 3.11
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5
       with:
         python-version: 3.11
         architecture: 'x64'
-    - uses: actions/download-artifact@v3
+    - uses: actions/download-artifact@v4
       with:
-        name: dist
+        pattern: dist-*
+        merge-multiple: true
         path: dist/
     - name: Test the wheel
       shell: bash {0}
@@ -58,8 +59,8 @@ jobs:
           pip install dist/gaga_phsp-*-py3-none-any.whl
           cd tests
           mkdir pth
-          python test001_non_cond.py
-          python test002_cond.py
+          python test001_non_cond.py || exit -1
+          python test002_cond.py || exit -1
 
   publish_wheel:
     runs-on: ubuntu-latest
@@ -69,13 +70,14 @@ jobs:
       uses: actions/checkout@v4
     - name: Checkout submodules
       run: git submodule update --init --recursive
-    - uses: actions/download-artifact@v3
+    - uses: actions/download-artifact@v4
       with:
-        name: dist
+        pattern: dist-*
+        merge-multiple: true
         path: dist/
     - name: Publish to PyPI
       if: github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags/')
-      uses: pypa/gh-action-pypi-publish@master
+      uses: pypa/gh-action-pypi-publish@release/v1
       with:
         user: __token__
         password: ${{ secrets.PYPI }}
