--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,9 +58,7 @@ jobs:
       run: |
           pip install dist/gaga_phsp-*-py3-none-any.whl
           cd tests
-          mkdir pth
-          python test001_non_cond.py || exit -1
-          python test002_cond.py || exit -1
+          python gaga_tests || exit -1
 
   publish_wheel:
     runs-on: ubuntu-latest
