--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "tests/data"]
 	path = tests/data
-	url = git@gitlab.in2p3.fr:opengamgate/gaga-phsp-data.git
+	url = https://gitlab.in2p3.fr/opengamgate/gaga-phsp-data.git
