--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,32 +35,32 @@ jobs:
         name: dist-${{ matrix.os }}-${{ matrix.python-version }}
         path: dist/
 
-  ssh_session:
-    runs-on: ubuntu-latest
-    needs: [build_wheel]
-    steps:
-    - name: Checkout github repo
-      uses: actions/checkout@v4
-    - name: Checkout submodules
-      shell: bash -l {0}
-      run: |
-        export GIT_SSL_NO_VERIFY=1
-        git submodule update --init --recursive
-    - name: Set up Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: 3.11
-        architecture: 'x64'
-    - uses: actions/download-artifact@v4
-      with:
-        pattern: dist-*
-        merge-multiple: true
-        path: dist/
-    - name: Start SSH session
-      uses: luchihoratiu/debug-via-ssh@main
-      with:
-        NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
-        SSH_PASS: ${{ secrets.SSH_PASS }}
+#  ssh_session:
+#    runs-on: ubuntu-latest
+#    needs: [build_wheel]
+#    steps:
+#    - name: Checkout github repo
+#      uses: actions/checkout@v4
+#    - name: Checkout submodules
+#      shell: bash -l {0}
+#      run: |
+#        export GIT_SSL_NO_VERIFY=1
+#        git submodule update --init --recursive
+#    - name: Set up Python
+#      uses: actions/setup-python@v5
+#      with:
+#        python-version: 3.11
+#        architecture: 'x64'
+#    - uses: actions/download-artifact@v4
+#      with:
+#        pattern: dist-*
+#        merge-multiple: true
+#        path: dist/
+#    - name: Start SSH session
+#      uses: luchihoratiu/debug-via-ssh@main
+#      with:
+#        NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
+#        SSH_PASS: ${{ secrets.SSH_PASS }}
 
   test_wheel:
     runs-on: ubuntu-latest
@@ -85,6 +85,7 @@ jobs:
       run: |
           pip install dist/gaga_phsp-*-py3-none-any.whl
           cd tests
+          cp -r data json mac output log /opt/hostedtoolcache/Python/3.11.9/x64/lib/python3.11/site-packages/tests/
           python ../gaga_phsp/bin/gaga_tests.py || exit -1
 
   publish_wheel:
